# stellar-core

./: .gitignore  Cargo.toml  rust_bridge_patch
Builds/VisualStudio/: CMakeLists.txt  command_lines  stellar-core.vcxproj  stellar-core.vcxproj.bak  stellar-core.vcxproj.filters  stellar-core.vcxproj.filters.bak
Builds/VisualStudio/libmedida/: CMakeLists.txt
Builds/VisualStudio/libsoci/: CMakeLists.txt
Builds/VisualStudio/libsoci_postgresql/: CMakeLists.txt
Builds/VisualStudio/libsoci_sqlite3/: CMakeLists.txt
Builds/VisualStudio/libsqlite/: CMakeLists.txt
src/bucket/: BucketApplicator.cpp  BucketApplicator.h  BucketManager.h  BucketManagerImpl.cpp  BucketManagerImpl.h  LedgerCmp.h
src/bucket/test/: BucketListTests.cpp  BucketManagerTests.cpp  BucketTests.cpp
src/herder/: Herder.h  HerderImpl.cpp  HerderImpl.h  HerderSCPDriver.cpp  HerderSCPDriver.h  PendingEnvelopes.cpp  PendingEnvelopes.h  SurgePricingUtils.cpp  SurgePricingUtils.h  TransactionQueue.cpp  TransactionQueue.h  TxQueueLimiter.cpp  TxQueueLimiter.h  TxSetFrame.cpp  TxSetFrame.h  TxSetUtils.cpp  TxSetUtils.h  Upgrades.cpp
src/herder/test/: HerderTests.cpp  PendingEnvelopesTests.cpp  TestTxSetUtils.cpp  TestTxSetUtils.h  TransactionQueueTests.cpp  TxSetTests.cpp  UpgradesTests.cpp
src/history/test/: HistoryTests.cpp  HistoryTestsUtils.cpp
src/invariant/: AccountSubEntriesCountIsValid.cpp
src/invariant/test/: BucketListIsConsistentWithDatabaseTests.cpp  SponsorshipCountIsValidTests.cpp
src/ledger/: InMemoryLedgerTxnRoot.cpp  InMemoryLedgerTxnRoot.h  LedgerManager.h  LedgerManagerImpl.cpp  LedgerManagerImpl.h  LedgerTxn.cpp  LedgerTxn.h  LedgerTxnConfigSettingSQL.cpp  LedgerTxnContractCodeSQL.cpp  LedgerTxnImpl.h
src/ledger/test/: LedgerCloseMetaStreamTests.cpp  LedgerTestUtils.cpp  LedgerTestUtils.h  LedgerTxnTests.cpp
src/main/: Application.h  ApplicationImpl.cpp  ApplicationImpl.h  ApplicationUtils.cpp  ApplicationUtils.h  CommandHandler.cpp  CommandLine.cpp  Config.cpp  Config.h  PersistentState.cpp  PersistentState.h  main.cpp
src/main/test/: ApplicationUtilsTests.cpp
src/overlay/: OverlayMetrics.cpp  OverlayMetrics.h  Peer.cpp  Peer.h
src/overlay/test/: OverlayTests.cpp
src/rust/: Cargo.toml
src/rust/src/: contract.rs  lib.rs
src/simulation/: ApplyLoad.cpp  ApplyLoad.h  CoreTests.cpp  LoadGenerator.cpp  TxGenerator.cpp
src/simulation/test/: LoadGeneratorTests.cpp
src/test/: FuzzerImpl.cpp  TxTests.cpp  TxTests.h
src/testdata/: ledger-close-meta-v1-protocol-20.json  ledger-close-meta-v1-protocol-21.json
src/transactions/: FeeBumpTransactionFrame.cpp  FeeBumpTransactionFrame.h  InvokeHostFunctionOpFrame.cpp  PathPaymentOpFrameBase.cpp  TransactionFrame.cpp  TransactionFrame.h  TransactionFrameBase.h  TransactionMetaFrame.cpp
src/transactions/test/: InvokeHostFunctionTests.cpp  TxEnvelopeTests.cpp
src/util/: ProtocolVersion.h  numeric.cpp  numeric.h  types.cpp
src/util/xdrquery/: XDRFieldResolver.h  XDRMatcher.cpp  XDRMatcher.h  XDRMatcher.hpp  XDRQueryError.h  XDRQueryEval.cpp  XDRQueryEval.h  XDRQueryParser.yy  XDRQueryScanner.ll  parser.yy  scanner.ll
src/util/xdrquery/test/: XDRQueryTests.cpp
src/util/xdrquery/tests/: XDRQueryTests.cpp
test-tx-meta-baseline-current/: AllowTrustTests.json  BeginSponsoringFutureReservesTests.json  BumpSequenceTests.json  ChangeTrustTests.json  ClaimableBalanceTests.json  ClawbackClaimableBalanceTests.json  ClawbackTests.json  CreateAccountTests.json  EndSponsoringFutureReservesTests.json  FeeBumpTransactionTests.json  InflationTests.json  InvokeHostFunctionTests.json  LiquidityPoolDepositTests.json  LiquidityPoolTradeTests.json  LiquidityPoolWithdrawTests.json  ManageBuyOfferTests.json  ManageDataTests.json  MergeTests.json  OfferTests.json  PathPaymentStrictSendTests.json  PathPaymentTests.json  PaymentTests.json  RevokeSponsorshipTests.json  SetOptionsTests.json  SetTrustLineFlagsTests.json  TxEnvelopeTests.json  TxResultsTests.json
test-tx-meta-baseline-next/: AllowTrustTests.json  BeginSponsoringFutureReservesTests.json  BumpSequenceTests.json  ChangeTrustTests.json  ClaimableBalanceTests.json  ClawbackClaimableBalanceTests.json  ClawbackTests.json  CreateAccountTests.json  EndSponsoringFutureReservesTests.json  FeeBumpTransactionTests.json  InflationTests.json  InvokeHostFunctionTests.json  LiquidityPoolDepositTests.json  LiquidityPoolTradeTests.json  LiquidityPoolWithdrawTests.json  ManageBuyOfferTests.json  ManageDataTests.json  MergeTests.json  OfferTests.json  PathPaymentStrictSendTests.json  PathPaymentTests.json  PaymentTests.json  RevokeSponsorshipTests.json  SetOptionsTests.json  SetTrustLineFlagsTests.json  TxEnvelopeTests.json  TxResultsTests.json
